--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,4 @@
 [Window][DockSpaceWindow]
-Pos=0,0
 Size=1366,712
 Collapsed=0
 
@@ -254,7 +253,7 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=0,77 Size=1366,660 Split=Y Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Pos=0,77 Size=1366,660 Split=Y Selected=0xBDDC88E0
   DockNode    ID=0x00000003 Parent=0xF15DEC6E SizeRef=1604,31 HiddenTabBar=1 Selected=0xF0F70764
   DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,995 Split=X HiddenTabBar=1
     DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=332,825 Selected=0x2E9237F7
