--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=300,829
+Size=325,825
 Collapsed=0
 DockId=0x00000001,0
 
@@ -21,13 +21,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=202,153
+Pos=27,135
 Size=1298,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=302,85
-Size=1302,796
+Pos=327,86
+Size=1273,791
 Collapsed=0
 DockId=0x00000004,0
 
@@ -37,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=302,52
-Size=1302,32
+Pos=327,52
+Size=1273,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -271,10 +271,34 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x9CCB52AC,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x48472D0D,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x2D985104,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xEA229670,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xAB5A7CA8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xF8DBF2C0,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=34,109 Size=1604,829 Split=X Selected=0xBDDC88E0
-  DockNode    ID=0x00000001 Parent=0xF15DEC6E SizeRef=300,829 Selected=0x2E9237F7
-  DockNode    ID=0x00000002 Parent=0xF15DEC6E SizeRef=1302,829 Split=Y
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
+  DockNode    ID=0x00000001 Parent=0xF15DEC6E SizeRef=325,829 Selected=0x2E9237F7
+  DockNode    ID=0x00000002 Parent=0xF15DEC6E SizeRef=1277,829 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1604,795 CentralNode=1 Selected=0xBDDC88E0
 
