--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=325,825
+Size=325,1009
 Collapsed=0
 DockId=0x00000001,0
 
@@ -21,13 +21,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=27,135
+Pos=561,172
 Size=1298,482
 Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=327,86
-Size=1273,791
+Size=1593,975
 Collapsed=0
 DockId=0x00000004,0
 
@@ -38,7 +38,7 @@ Collapsed=0
 
 [Window][##toolbar]
 Pos=327,52
-Size=1273,32
+Size=1593,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -295,8 +295,28 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x7678CB36,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x74280142,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xDB71CD4E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE4722440,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x618A07A1,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=242,317 Size=1920,1009 Split=X Selected=0xBDDC88E0
   DockNode    ID=0x00000001 Parent=0xF15DEC6E SizeRef=325,829 Selected=0x2E9237F7
   DockNode    ID=0x00000002 Parent=0xF15DEC6E SizeRef=1277,829 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
