--- a/imgui.ini
+++ b/imgui.ini
@@ -37,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=327,52
-Size=1593,32
+Pos=0,52
+Size=1920,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -315,8 +315,16 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xEF386A44,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x9243DA67,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=242,317 Size=1920,1009 Split=X Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=280,138 Size=1920,1009 Split=X Selected=0xBDDC88E0
   DockNode    ID=0x00000001 Parent=0xF15DEC6E SizeRef=325,829 Selected=0x2E9237F7
   DockNode    ID=0x00000002 Parent=0xF15DEC6E SizeRef=1277,829 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
