--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1172,525
-Size=428,352
+Pos=1322,728
+Size=598,352
 Collapsed=0
 DockId=0x00000014,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=224,525
-Size=946,352
+Pos=0,728
+Size=1320,352
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65603,9 +65603,45 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xC114F983,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xC6030F1D,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x60F45D1A,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x91A83C33,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA923367C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x82DD0ED4,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xC8B473C5,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x5A00B4BC,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xDB3108C9,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=303,78 Size=1920,1028 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
