--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1057
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,9 +11,9 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,45
-Size=218,1012
+Size=275,418
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][Panels]
 ViewportPos=222,295
@@ -27,8 +27,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=220,45
-Size=1377,758
+Pos=277,45
+Size=1327,582
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=1599,45
-Size=321,1012
+Pos=0,465
+Size=275,416
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1343,805
-Size=254,252
+Pos=1348,629
+Size=256,252
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=220,805
-Size=1121,252
+Pos=277,629
+Size=1069,252
 Collapsed=0
 DockId=0x00000013,0
 
@@ -66231,24 +66231,24 @@ RefScale=16
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,68 Size=1920,1012 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=218,832 Selected=0x2E9237F7
-  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1380,832 Split=X
-    DockNode            ID=0x00000003 Parent=0x00000002 SizeRef=1057,1008 Split=X
-      DockNode          ID=0x00000011 Parent=0x00000003 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
-        DockNode        ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
-        DockNode        ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
-      DockNode          ID=0x00000012 Parent=0x00000003 SizeRef=1575,829 Split=X
-        DockNode        ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
-          DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,578 Split=X Selected=0xF6FF0623
-              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
-              DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
-            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,252 Split=X Selected=0xBF096F38
-              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=860,248 Selected=0xBF096F38
-              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=195,248 Selected=0x2323D3E4
-          DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
-        DockNode        ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
-    DockNode            ID=0x00000004 Parent=0x00000002 SizeRef=321,1008 Selected=0xF4B38336
+DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=190,258 Size=1604,836 Split=X Selected=0xBDDC88E0
+  DockNode            ID=0x00000001 Parent=0xF15DEC6E SizeRef=275,832 Split=Y Selected=0x2E9237F7
+    DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=218,416 Selected=0x2E9237F7
+    DockNode          ID=0x00000004 Parent=0x00000001 SizeRef=218,414 Selected=0xF4B38336
+  DockNode            ID=0x00000002 Parent=0xF15DEC6E SizeRef=1323,832 Split=X
+    DockNode          ID=0x00000011 Parent=0x00000002 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
+      DockNode        ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
+      DockNode        ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
+    DockNode          ID=0x00000012 Parent=0x00000002 SizeRef=1575,829 Split=X
+      DockNode        ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
+        DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
+          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,578 Split=X Selected=0xF6FF0623
+            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+            DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
+          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,252 Split=X Selected=0xBF096F38
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1066,248 Selected=0xBF096F38
+            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=255,248 Selected=0x2323D3E4
+        DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
+      DockNode        ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
